# eggcode

./: README.md  grammar.lark  parser.py  pyproject.toml  test.egc  test.py
